[TEX] Pass over algorithmic details [no ci]

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -676,3 +676,19 @@
                   Workshop on AI4DifferentialEquations In Science},
   year =         2024,
 }
+
+@article{dangel2022vivit,
+  title =        {Vi{V}i{T}: Curvature Access Through The Generalized
+                  Gauss-Newton{\textquoteright}s Low-Rank Structure},
+  author =       {Felix Dangel and Lukas Tatzel and Philipp Hennig},
+  journal =      {Transactions on Machine Learning Research (TMLR)},
+  year =         2022,
+}
+
+@inproceedings{papyan2019measurements,
+  author =       {Vardan Papyan},
+  title =        {Measurements of Three-Level Hierarchical Structure in the
+                  Outliers in the Spectrum of Deepnet {H}essians},
+  booktitle =    {International Conference on Machine Learning (ICML)},
+  year =         2019,
+}
