Update on Overleaf.

--- a/paper/sections/heat_equation.tex
+++ b/paper/sections/heat_equation.tex
@@ -1,4 +1,5 @@
-Consider the $D$-dimensional\todo{Low priority: lower case $d$ or upper case $D$? The number of trainable weights is already $D$.} homogeneous heat equation
+Consider the $D$-dimensional%\todo{Low priority: lower case $d$ or upper case $D$? The number of trainable weights is already $D$.} 
+homogeneous heat equation
 \begin{align*}
   \partial_{t} u(t, \vx)
   -
